changes were made by sir spencer for training purposes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
+      background-color: #e2f423;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
-    <h2>This application was deployed using AWS CodeDeploy.</h2>
+    <h1>Spencer - Assignment done</h1>
+    <h2>This application is modified by sir Spencer for training purposes.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
